<resources>
    <string name="app_name">Control Center</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="mobile_data">Mobile Data</string>
    <string name="on">On</string>
    <string name="do_not_disturb">Do not disturb</string>
    <string name="airplane_mode">Airplane mode</string>
    <string name="battery_saver">Battery saver</string>
    <string name="mute">Mute</string>
    <string name="auto_rotate">Auto-rotate</string>
    <string name="night_light">Night Light</string>
    <string name="dark_theme">Dark theme</string>
    <string name="hotspot">Hotspot</string>
    <string name="no_sim_card">No Sim card !</string>
    <string name="wi_fi">Wi-Fi</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="flashlight">Flashlight</string>
    <string name="percent">\" %\"</string>
    <string name="off">Off</string>
    <string name="connecting">Connecting…</string>
    <string name="request_permison_error">Please grant the app permissions.</string>
    <string name="device_does_not_support_bluetooth">" Device does not support Bluetooth."</string>
    <string name="unsupported_device">Unsupported device</string>
    <string name="describe_no_sim_card">" Insert a sim card to use mobile hotspot and other internet sharing options."</string>
    <string name="describe_airplane_mode">"Turn off airplane mode to use mobile hotspot and other internet sharing options."</string>
    <string name="ACCESS_NOTIFICATION_POLICY">Request do not disturb access</string>
    <string name="ACCESS_NOTIFICATION">Request mute access</string>
    <string name="DESCRIBE_ACCESS_NOTIFICATION_POLICY">"Control Center need permission to change some system settings"</string>
    <string name="des_turn_on_location">Unfortunately, Android requires location to be on to allow scanning for Wi-Fi networks. Click to turn it on.</string>
    <string name="network_not_available">Network not available.</string>
    <string name="scanning">Scanning...</string>
    <string name="connected">Connected</string>
    <string name="bluetooth_off">" Bluetooth is off"</string>
    <string name="turning_on">Wifi turning on .</string>
    <string name="bluetooth_on">Bluetooth turn on.</string>
    <string name="device_does_not_support">Device not supported.</string>
    <string name="open_system">Open system</string>
    <string name="set_up_hotspot">Set up Hotspot</string>
    <string name="describe_hotspot">Please find the Hotspot in your system shade (on 1st or 2nd page) then click it one time</string>
    <string name="other_settings">Other settings</string>
    <string name="back">BACK</string>
    <string name="data_saver">Data saver</string>
    <string name="screen_transmission">Screen transmission</string>
    <string name="nfc">NFC</string>
    <string name="location">Location</string>
    <string name="set_up_data_saver">Set up Data Saver</string>
    <string name="describe_data_saver">Please find the Data Saver in your system shade (on 1st or 2nd page) then click it one time.</string>
    <string name="set_up_location">Set up Location</string>
    <string name="describe_location">Please find the Location in your system shade (on 1st or 2nd page) then click it one time.</string>
    <string name="describe_battery_saver">Please find the Battery saver in your system shade (on 1st or 2nd page) then click it one time.</string>
    <string name="describe_airplane">Please find the AirPlane Mode in your system shade (on 1st or 2nd page) then click it one time.</string>
    <string name="describe_nfc">Please find the NFC in your system shade (on 1st or 2nd page) then click it one time.</string>
    <string name="describe_night_light">Please find the Night Light in your system shade (on 1st or 2nd page) then click it one time.</string>
    <string name="describe_screen_transmission">Please find the Screen Transmission in your system shade (on 1st or 2nd page) then click it one time.</string>
    <string name="describe_auto_rotate">Please find the Auto Rotate in your system shade (on 1st or 2nd page) then click it one time.</string>
    <string name="describe_data_mobile">Please find the Data mobile in your system shade (on 1st or 2nd page) then click it one time.</string>
    <string name="describe_rotation">Please find the Auto rotation in your system shade (on 1st or 2nd page) then click it one time.</string>
    <string name="describe_dark_theme">Please find the Dark theme in your system shade (on 1st or 2nd page) then click it one time.</string>
    <string name="describe_brightness">Please find the Brightness in your system shade (on 1st or 2nd page) then click it one time.</string>
    <string name="describe_auto_brightness">Please find the Auto Brightness in your system shade (on 1st or 2nd page) then click it one time.</string>
    <string name="control_center">Control Center</string>
    <string name="dang_tat">Đang tắt</string>
    <string name="turn_off">Turn off</string>
    <string name="arrange">Arrange</string>
    <string name="icon_shape">Icon shape</string>
    <string name="find_app_here">Find %s here</string>
    <string name="round">Round</string>
    <string name="color">Color</string>
    <string name="back_ground">Background</string>
    <string name="blur_image">Blur image</string>
    <string name="back_ground_color">Background color</string>
    <string name="notification_background_color">Notification color</string>
    <string name="selected_color">Selected color</string>
    <string name="color_of_the_dimmer">The color of the dimmer</string>
    <string name="set_all_color_to_default">Set all colors to default</string>
    <string name="use_data">Use data</string>
    <string name="show_data_usage">Show data usage</string>
    <string name="show_traffic_usage_today">Show traffic usage today</string>
    <string name="use_reset_date">Use reset date</string>
    <string name="warning">Warning (GB)</string>
    <string name="content_warning">The icon turns red when the specified number is exceeded</string>
    <string name="enjoying_app">Enjoying app?</string>
    <string name="how_feel">How do you feel about this app?</string>
    <string name="text_color">Text color</string>
    <string name="grant_permission">Grant permission</string>
    <string name="content_grant_permission">The following permissions are required to run\nthe application</string>
    <string name="two_sim">2 SIM</string>
    <string name="overlay_application">Overlay application</string>
    <string name="overlay">Overlay</string>
    <string name="accessibility">Accessibility</string>
    <string name="allow">ALLOW</string>
    <string name="set_up_settings">Set up settings</string>
    <string name="set_up_data_mobile">Set up Data Mobile</string>
    <string name="set_up_battery_saver">Set up Battery Saver</string>
    <string name="DESCRIBE_REQUEST_WRITE_SETTING">Control Center need permission to change some system settings</string>
    <string name="round_outline">Round outline</string>
    <string name="dotted_round">Dotted round</string>
    <string name="round_outside">Round outside</string>
    <string name="round_gradient">Round Gradient</string>
    <string name="round_holo">Round Holo</string>
    <string name="droplets">Droplets</string>
    <string name="square_corners">Square corners</string>
    <string name="square_corner">Square corner</string>
    <string name="cornered_rectangle">Cornered rectangle</string>
    <string name="square">Square</string>
    <string name="rectangle">Rectangle</string>
    <string name="hexagon">Hexagon</string>
    <string name="pentagon">Pentagon</string>
    <string name="flower">Flower</string>
    <string name="vase">Vase</string>
    <string name="tapered_square">Tapered square</string>
    <string name="pebble">Pebble</string>
    <string name="diamond">Diamond</string>
    <string name="heart">Heart</string>
    <string name="dog_leg">Dog leg</string>
    <string name="bell">Bell</string>
    <string name="sun">Sun</string>
    <string name="star">Star</string>
    <string name="file">File</string>
    <string name="folder">Folder</string>
    <string name="suitcase">Suitcase</string>
    <string name="stickers">Stickers</string>
    <string name="light_bulb">Light Bulb</string>
    <string name="medal">Medal</string>
    <string name="icon">Icon</string>
    <string name="shield">Shield</string>
    <string name="droid">Droid</string>
    <string name="do_not_use">Do not use</string>
    <string name="huy">HỦY</string>
    <string name="txt_backround">Background</string>
    <string name="txt_background">Background</string>
    <string name="content_background_image">Blur Image</string>
    <string name="content_background_color">Monochrome Color</string>
    <string name="content_background_live">Live Blur</string>
    <string name="cancle">CANCLE</string>
    <string name="cancel">CANCEL</string>
    <string name="color_4DFFFFFF">#1AFFFFFF</string>
    <string name="color_2C61CC">#2C61CC</string>
    <string name="ok">OK</string>
    <string name="opacity">Opacity</string>
    <string name="custom_photo">Custom photo</string>
    <string name="action_blur_image">BLUR_IMAGE</string>
    <string name="done">DONE</string>
    <string name="choose_color">Choose color</string>
    <string name="action_choose_color">CHOOSE_COLOR</string>
    <string name="action_background_color">BACKGROUND_COLOR</string>
    <string name="TEXT_COLOR">TEXT_COLOR</string>
    <string name="action_text_color">ACTION_TEXT_COLOR</string>
    <string name="icon_color">Icon color</string>
    <string name="ICON_COLOR">ICON_COLOR</string>
    <string name="action_icon_color">ACTION_ICON_COLOR</string>
    <string name="set_up_brightness">Set up brightness</string>
    <string name="set_up_auto_brightness">Set up auto brightness </string>
    <string name="txt_dimmer_color">The color of the dimmer</string>
    <string name="DIMMER_COLOR">DIMMER_COLOR</string>
    <string name="action_dimmer_color">ACTION_DIMMER_COLOR</string>
    <string name="action_usage_data">ACTION_USAGE_DATA</string>
    <string name="this_month">This month :</string>
    <string name="state_usage_data">STATUS_USAGE_DATA</string>
    <string name="total_usage_data_of_day">TOTAL_DATA_OF_DAY</string>
    <string name="stata_usage_day">STATE_USAGE_DATA_OF_DAY</string>
    <string name="action_usage_data_of_day">ACTION_USAGE_DATA_OF_DAY</string>
    <string name="this_day">This day :</string>
    <string name="count_day">COUNT_DAY</string>
    <string name="count_hour">COUNT_HOUR</string>
    <string name="hour">HOUR</string>
    <string name="minute">MINUTE</string>
    <string name="day">DAY</string>
    <string name="month">MONTH</string>
    <string name="year">YEAR</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="describe_reset_default_color">This will reset all your colors to the default ones.</string>
    <string name="set_up_date">Use set up date</string>
    <string name="use_date_set_up">USE_DATE_SET_UP</string>
    <string name="count">COUNT</string>
    <string name="warning_at_gb">Warning (GB)</string>
    <string name="warning_gb">WARNING_GB</string>
    <string name="turn_on">Turn on</string>
    <string name="action_screen_shot">ACTION_SCREENSHOT</string>
    <string name="screenshot">SCREENSHOT</string>
    <string name="densityDpi">densityDpi</string>
    <string name="special">Special</string>
    <string name="describe_helper">Set the details for each item to how they appear in you system shade</string>
    <string name="describe_helper_second">Changes are saved automatically</string>
    <string name="open_system_shade">Open system shade</string>
    <string name="notifications">Notifications</string>
    <string name="no_new_notifications">No New Notification</string>
    <string name="clear_all">Clear All</string>
</resources>