<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_12sdp">

    <androidx.core.widget.NestedScrollView
        android:background="@drawable/background_edit_shade"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/_13sdp">

            <TextView
                android:id="@+id/txt_special"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center"
                android:text="@string/special"
                android:textColor="@color/color_101010"
                android:textSize="@dimen/_20sdp"
                app:layout_constraintHeight_percent="0.06"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_describe"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintHeight_percent="0.11"
                android:gravity="center"
                android:padding="@dimen/_15sdp"
                android:text="@string/describe_helper"
                android:textColor="@color/color_777777"
                android:textSize="@dimen/_11sdp"
                app:layout_constraintTop_toBottomOf="@+id/txt_special" />

            <TextView
                android:paddingBottom="@dimen/_18sdp"
                android:id="@+id/txt_describe_helper_second"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintHeight_percent="0.07"
                android:gravity="center"
                android:text="@string/describe_helper_second"
                android:textColor="@color/color_777777"
                android:textSize="@dimen/_11sdp"
                app:layout_constraintTop_toBottomOf="@+id/txt_describe" />

            <TextView
                android:id="@+id/open_sys_shade"
                android:background="@drawable/state_click_open_sys_shade"
                android:textColor="@color/white"
                android:padding="@dimen/_11sdp"
                android:text="@string/open_system_shade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_describe_helper_second"
                android:focusable="true" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcl_sys_shade"
                    app:layout_constraintHeight_percent="0.666"
                    app:layout_constraintTop_toBottomOf="@+id/open_sys_shade"
                    android:layout_marginTop="@dimen/_18sdp"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>